--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 
   "name": "azaelcodes/ab-experiments",
   "description": "An AB Experiment package for your site experiments",
-  "keywords": ["ab test", "ab experiments", "experiments", "a/b", "ab testing"],
+  "keywords": ["ab test", "ab experiments", "experiments", "ab", "ab testing"],
   "homepage": "https://github.com/azaelcodes/ab-experiments",
   "license": "MIT",
   "authors": [
